# from-first-principles

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING_CONTENT.md  CONTRIBUTING_DEV.md  LICENSE  README.md  SECURITY.md
.github/workflows/: analyticslayer-ci.yml  chatmiddleware-ci.yml  ci.yml  superlinter.yaml  superlinter.yml
scripts/: deploy-webui-service.sh  reset-dev-branch.sh
services/analyticslayer/: .gitignore  hello.py  page_hits.db  pyproject.toml  run-tests.sh
services/analyticslayer/src/web_tracker/: app.py  main.py
services/analyticslayer/src/web_tracker/backend/: routers.py  tracking.py
services/analyticslayer/src/web_tracker/config/: config.yaml  config_utils.py
services/analyticslayer/src/web_tracker/tests/: test_main.py
services/chatmiddleware/: .gitignore  README.md  pyproject.toml  run-tests.sh
services/chatmiddleware/src/: main.py  serve.py
services/chatmiddleware/src/appfactory/: __init__.py
services/chatmiddleware/src/config/: logging_config.yaml
services/chatmiddleware/src/models/: chat_model.py
services/chatmiddleware/src/routers/: chat_router.py  landing_router.py
services/chatmiddleware/src/routes/: chat.py  chat_routes.py  landing.py  landing_routes.py
services/chatmiddleware/src/templates/: index.html
services/chatmiddleware/src/utils/: config.py  customlogger.py  logging_manager
services/chatmiddleware/tests/: appfactory_test.py  conftest.py  main_test.py  serve_test.py
services/chatmiddleware/tests/models_test/: chat_model_test.py
services/chatmiddleware/tests/routers_test/: chat_router_test.py  landing_router_test.py
services/chatmiddleware/tests/routes_test/: chat_test.py  landing_test.py
services/webui/: .gitignore  README.md
services/webui/src/: index.html  index_unreleased_features.html
services/webui/src/assets/css/: chatui.css  tooplate-style.css
services/webui/src/assets/js/: chat.js  contact-us.js  dynamic-mathjax-content.js  events_listener.js  light-dark-mode.js  newsletter.js  render-article-text.js
services/webui/src/content/engineering/post1/: blog-page.html  body.md  body.txt  body_simple.md
services/webui/src/content/home/post1/: blog-page.html  body.md  body_simple.md
services/webui/src/content/home/post2/: blog-page.html  body.md  body_simple.md
services/webui/src/content/home/post3/: blog-page.html  body.md  body_simple.md
services/webui/src/pages/: blog.html  engineering.html
services/webui/src/unreleased/: chat.html  index_unreleased_features.html  knowledgegraph.html
services/webui/streamlit/: .gitignore
services/webui/streamlit/src/utils/: customlogger.py
